# meshviz

./: README.md  dune-project  meshviz.opam  pbr_material_notes.md
lib/: dune  lighting.ml  lighting.mli  meshviz.ml  renderCube.ml  renderQuad.ml  utils.ml
lib/resources/: brdf.frag  lighting.fs  postfx.frag
lib/resources/shaders/: cubemap.frag  irradiance.frag  lighting.frag  pbr.frag  prefilter.frag
test/: dune
