(library
 (name meshviz)
 (libraries OCADml tgls raylib dune-site))

(install
 (files
  "resources/pbr.vert"
  "resources/pbr.frag"
  "resources/brdf.vert"
  "resources/brdf.frag"
  "resources/skybox.vert"
  "resources/skybox.frag"
  "resources/cubemap.vert"
  "resources/cubemap.frag"
  "resources/postfx.vert"
  "resources/postfx.frag"
  "resources/irradiance.frag"
  "resources/prefilter.frag")
 (section
  (site
   (meshviz shaders))))

(generate_sites_module
 (module DuneSites)
 (sites meshviz))
